frontend: fix feetarget and input element error styling
Feetarget with long error text could break onto next line.

This caused the whole Feetarget component to look broken.

--- a/frontends/web/src/components/forms/input-with-dropdown.module.css
+++ b/frontends/web/src/components/forms/input-with-dropdown.module.css
@@ -40,10 +40,6 @@
     color: var(--color-softred) !important;
 }
 
-.errorText > span > span {
-    margin-left: 5px;
-}
-
 .inputDropdownWrapper {
     display: grid;
     grid-template-columns: 1fr minmax(160px, 280px);
